<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f6e4ec"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/patra1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo1" />


    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        android:maxLines="1"
        android:autofillHints="emailAddress"
        android:layout_marginTop="350dp"
        android:textSize="20sp"
        android:padding="20dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        android:autofillHints="Enter your Password"
        android:inputType="numberPassword"
        android:layout_below="@+id/etUserName"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="20dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColorHint="#dbece4"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/txtSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginStart="70dp"
        android:layout_marginTop="26dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="25dp"
        android:text="@string/forget_password"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>